[package]
name = "sandgate"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "high-level access to select SNMP targets, serde deserialisation"
keywords = ["snmp", "serde"]
repository = "https://github.com/oxidecomputer/sandgate"

[dependencies]
anyhow = "1"
csnmp = "0.6"
serde = { version = "1", features = ["derive"] }
serde_repr = { version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
getopts = "0.2"
